--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span>My Portofolio</span>
             </a>
             <nav id="navbar" class="navbar p-0">
-                <ul class="m-0 p-0 d-flex align-items-center">
+                <ul class="m-0 p-0 align-items-center">
                     <li><a class="nav-link scrollto active" href="#home">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About Me</a></li>
                     <li><a class="nav-link scrollto" href="#project">Project</a></li>
@@ -105,72 +105,77 @@
                 </div>
             </div>
         </section>
+        <section id="project" class="project">
+            <div class="container" data-aos="fade-up">
+                <h2>Project</h2>
+                <div class="row project-item">
+                    <div class="col-md-4">
+                        <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
+                    </div>
+                    <div class="col-md-8">
+                        <h4>Project 01</h4>
+                        <div class="divider"></div>
+                        <h5>Judul Project 1</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates
+                            id
+                            saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
+                            repudiandae placeat tenetur quasi deserunt.</p>
+                        <span class="btn btn-sm btn-primary">Read More</span>
+                    </div>
+                </div>
+                <div class="row project-item">
+                    <div class="col-md-4">
+                        <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
+                    </div>
+                    <div class="col-md-8">
+                        <h4>Project 02</h4>
+                        <div class="divider"></div>
+                        <h5>Judul Project 2</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates
+                            id
+                            saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
+                            repudiandae placeat tenetur quasi deserunt.</p>
+                        <span class="btn btn-sm btn-primary">Read More</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2>Contact</h2>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form action="" class="php-email-form">
+                            <div class="row gy-4">
+                                <div class="col-md-6">
+                                    <input type="text" name="name" class="form-control" placeholder="Your Name"
+                                        required />
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" name="email" class="form-control" placeholder="Your Email"
+                                        required />
+                                </div>
+                                <div class="col-md-12">
+                                    <input type="text" name="subject" class="form-control" placeholder="Subject"
+                                        required />
+                                </div>
+                                <div class="col-md-12">
+                                    <textarea name="message" row="6" class="form-control" placeholder="Message"
+                                        required>
+                                    </textarea>
+                                </div>
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary">
+                                        SEND IT NOW
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <section id="project" class="project">
-        <div class="container" data-aos="fade-up">
-            <h2>Project</h2>
-            <div class="row project-item">
-                <div class="col-md-4">
-                    <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
-                </div>
-                <div class="col-md-8">
-                    <h4>Project 01</h4>
-                    <div class="divider"></div>
-                    <h5>Judul Project 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates id
-                        saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
-                        repudiandae placeat tenetur quasi deserunt.</p>
-                    <span class="btn btn-sm btn-primary">Read More</span>
-                </div>
-            </div>
-            <div class="row project-item">
-                <div class="col-md-4">
-                    <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
-                </div>
-                <div class="col-md-8">
-                    <h4>Project 02</h4>
-                    <div class="divider"></div>
-                    <h5>Judul Project 2</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates id
-                        saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
-                        repudiandae placeat tenetur quasi deserunt.</p>
-                    <span class="btn btn-sm btn-primary">Read More</span>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form action="" class="php-email-form">
-                        <div class="row gy-4">
-                            <div class="col-md-6">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name" required />
-                            </div>
-                            <div class="col-md-6">
-                                <input type="email" name="email" class="form-control" placeholder="Your Email"
-                                    required />
-                            </div>
-                            <div class="col-md-12">
-                                <input type="text" name="subject" class="form-control" placeholder="Subject" required />
-                            </div>
-                            <div class="col-md-12">
-                                <textarea name="message" row="6" class="form-control" placeholder="Message" required>
-                                </textarea>
-                            </div>
-                            <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary">
-                                    SEND IT NOW
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
     <footer id="footer" class="footer">
         <div class="footer-top">
             <div class="container">
@@ -200,8 +205,10 @@
             </div>
         </div>
     </footer>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
