--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Porto</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/aos/dist/aos.css">
     <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -14,10 +15,10 @@
     <header id="header" class="header fixed-top">
         <div class="container-fluid container d-flex align-items-center justify-content-between">
             <a href="#" class="logo d-flex align-items-center">
-                <span>My Portofolio</span>
+                <span>Welcome</span>
             </a>
-            <nav id="navbar" class="navbar p-0">
-                <ul class="m-0 p-0 align-items-center">
+            <nav id="navbar" class="navbar">
+                <ul>
                     <li><a class="nav-link scrollto active" href="#home">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About Me</a></li>
                     <li><a class="nav-link scrollto" href="#project">Project</a></li>
@@ -27,49 +28,46 @@
             </nav>
         </div>
     </header>
-    <section id="home" class="hero d-flex align-items-center">
+    <section id="home" class="hero d-flex align-items-center" data-aos="fade-down" data-aos-duration="1000">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
-                    <h5>Hi, I'm Member of Software</h5>
+                    <h1>Hello, I'm Me</h1>
                     <h2>Web Developer & Game Developer</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore enim quibusdam incidunt
-                        dolores libero eius nobis praesentium, porro repudiandae aspernatur animi adipisci distinctio
-                        temporibus. Doloremque aperiam fugiat nam magni!</p>
+                    <p>Understanding your limitations is the beginning of wisdom. Accepting your limits, is the
+                        beginning of strength.</p>
                     <div>
-                        <a href="#" class="btn btn-primary">
+                        <a href="#" class="btn btn-warning">
                             <i class="bi bi-envelope"></i> contact me
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 hero-img">
-                    <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+                    <img src="assets/img/fp.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
     </section>
     <main id="main">
         <section id="about" class="about">
-            <div class="container" data-aos="fade-up">
+            <div class="container">
                 <div class="row gx-0">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1000">
                         <h2>About Me</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, eius earum asperiores
-                            necessitatibus officiis quis, temporibus esse molestias vero minus ex assumenda facere
-                            pariatur dolorum eos aspernatur unde! Explicabo, suscipit.</p>
+                        <p>I had no idea about me for now. Please wait for the update...</p>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9" data-aos="fade-up" data-aos-duration="1000">
                         <h2>Profile</h2>
                         <table class="table">
                             <tr>
                                 <td>Fullname</td>
                                 <td>:</td>
-                                <td>Member of Software</td>
+                                <td>Faris Adhi Laksana Yusuf</td>
                             </tr>
                             <tr>
                                 <td>Nickname</td>
                                 <td>:</td>
-                                <td>Software</td>
+                                <td>Siraf</td>
                             </tr>
                             <tr>
                                 <td>Place / DoB</td>
@@ -79,12 +77,12 @@
                             <tr>
                                 <td>Height / Weight</td>
                                 <td>:</td>
-                                <td>165cm / 55kg</td>
+                                <td>162cm / 55kg</td>
                             </tr>
                             <tr>
                                 <td>Religion</td>
                                 <td>:</td>
-                                <td>Moeslem</td>
+                                <td>Muslim</td>
                             </tr>
                             <tr>
                                 <td>University</td>
@@ -98,50 +96,46 @@
                             <li>1st WINNER OF LEVEL GAME DEVELOPMENT COMPETITION</li>
                         </ul>
                     </div>
-                    <div class="col-lg-3 px-3 pe-lg-0 text-rigt" data-aos="zoom-out" data-aos-delay="200">
-                        <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
-                        <a href="#" class="btn btn-primary w-100"><i class="bi bi-download"></i> Download CV </a>
+                    <div class="col-lg-3 px-3 pe-lg-0 text-rigt" data-aos="fade-up" data-aos-duration="1000">
+                        <img src="assets/img/fp.gif" class="img-fluid" alt="" />
+                        <a href="#" class="btn btn-warning w-100"><i class="bi bi-download"></i> Download CV </a>
                     </div>
                 </div>
             </div>
         </section>
         <section id="project" class="project">
-            <div class="container" data-aos="fade-up">
-                <h2>Project</h2>
-                <div class="row project-item">
+            <div class="container">
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <h2>Project</h2>
+                </div>
+                <div class="row project-item" data-aos="fade-right" data-aos-duration="1000">
                     <div class="col-md-4">
-                        <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
+                        <img src="assets/img/project1.png" class="img-fluid img-thumbnail" alt="" />
                     </div>
                     <div class="col-md-8">
                         <h4>Project 01</h4>
                         <div class="divider"></div>
-                        <h5>Judul Project 1</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates
-                            id
-                            saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
-                            repudiandae placeat tenetur quasi deserunt.</p>
-                        <span class="btn btn-sm btn-primary">Read More</span>
+                        <h5>Web Development</h5>
+                        <p>This is my first project about web development.</p>
+                        <span class="btn btn-sm btn-warning">Read More</span>
                     </div>
                 </div>
-                <div class="row project-item">
+                <div class="row project-item" data-aos="fade-right" data-aos-duration="1000">
                     <div class="col-md-4">
-                        <img src="assets/img/project-1.png" class="img-fluid img-thumbnail" alt="" />
+                        <img src="assets/img/404.gif" class="img-fluid img-thumbnail" alt="" />
                     </div>
                     <div class="col-md-8">
                         <h4>Project 02</h4>
                         <div class="divider"></div>
-                        <h5>Judul Project 2</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus autem culpa voluptates
-                            id
-                            saepe, dolorem corporis adipisci officiis quod deleniti quidem tempora accusamus dolor aut
-                            repudiandae placeat tenetur quasi deserunt.</p>
-                        <span class="btn btn-sm btn-primary">Read More</span>
+                        <h5>Game Development</h5>
+                        <p>This is NOT! my second project about game development.</p>
+                        <span class="btn btn-sm btn-warning">Read More</span>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contact" class="contact">
-            <div class="container">
+            <div class="container" data-aos="flip-up" data-aos-duration="1000">
                 <h2>Contact</h2>
                 <div class="row">
                     <div class="col-lg-12">
@@ -161,11 +155,10 @@
                                 </div>
                                 <div class="col-md-12">
                                     <textarea name="message" row="6" class="form-control" placeholder="Message"
-                                        required>
-                                    </textarea>
+                                        required></textarea>
                                 </div>
                                 <div class="col-md-12">
-                                    <button type="submit" class="btn btn-primary">
+                                    <button type="submit" class="btn btn-warning">
                                         SEND IT NOW
                                     </button>
                                 </div>
@@ -177,7 +170,7 @@
         </section>
     </main>
     <footer id="footer" class="footer">
-        <div class="footer-top">
+        <div class="footer-top" data-aos="fade-up" data-aos-duration="1000">
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-md-4">
@@ -208,6 +201,7 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/aos/dist/aos.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
