--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/vendor/aos/dist/aos.css">
     <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="col-md-4">
                         <h2>Contact</h2>
-                        <h4><i class="bi bi-envelope"></i> software2021@mail.com</h4>
+                        <h4><i class="bi bi-envelope"></i> farisadhilaksanayusuf@mail.com</h4>
                     </div>
                     <div class="col-md-4">
                         <h2>Follow Me</h2>
