--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="col-md-4">
                         <h2>Contact</h2>
-                        <h4><i class="bi bi-envelope"></i> farisadhilaksanayusuf@mail.com</h4>
+                        <h4><i class="bi bi-envelope"></i> farisadhilaksanayusuf@gmail.com</h4>
                     </div>
                     <div class="col-md-4">
                         <h2>Follow Me</h2>
